--- a/src/app/modules/auth/login-page/login-page.component.html
+++ b/src/app/modules/auth/login-page/login-page.component.html
@@ -1,4 +1,3 @@
-
 <div class="wrapper wrapper-full-page">
     <div class="page-header login-page header-filter"
          style="background-image: url('https://www.lissod.com.ua/user/images/tp_bg_pink.jpg');">
@@ -13,6 +12,15 @@
                             <crm-loader></crm-loader>
                         </div>
                         <div class="card-body " *ngIf="!Loading">
+
+                            <div class="alert alert-danger alert-with-icon">
+                                <i class="material-icons" data-notify="icon">notifications</i>
+
+                                <span data-notify="message">
+                                    Сессия была завершина в связи с угрозой безопасности.
+                                    Для продолжения работы перезайдите в систему.
+                                </span>
+                            </div>
                             <span class="bmd-form-group">
                                 <div class="input-group">
                                   <div class="input-group-prepend">
