--- a/src/app/modules/dashboard/patient-page/patient-page.component.html
+++ b/src/app/modules/dashboard/patient-page/patient-page.component.html
@@ -142,7 +142,7 @@
 
                     <mat-paginator [length]="resultsLength"
                                    [pageSize]="2"
-                                   [pageSizeOptions]="[5, 10, 20]"
+                                   [pageSizeOptions]="[2, 5, 10, 20]"
                                    [showFirstLastButtons]="true">
                     </mat-paginator>
                   </div>
