--- a/src/app/modules/dashboard/user-page/user-doctors/user-doctor-create/user-doctor-create.component.html
+++ b/src/app/modules/dashboard/user-page/user-doctors/user-doctor-create/user-doctor-create.component.html
@@ -7,7 +7,7 @@
             <div class="card-icon">
               <i class="material-icons">contacts</i>
             </div>
-            <h4 class="card-title">Horizontal Form</h4>
+            <h4 class="card-title">Добавление врача</h4>
           </div>
           <div class="card-body ">
 
